--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,8 +11,8 @@
   <head>
     <title>Title of Home Page</title>
     <th:block id="home-static-resources">
-      <script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>
-      <link rel="stylesheet" type="text/css" th:href="@{/home.css}" />
+      <!-- <script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script> -->
+      <link rel="stylesheet" type="text/css" />
     </th:block>
   </head>
   <body>
